# AWGSegmentFactory

./: .gitignore  README.md  TODO.md  plan.md  pyproject.toml
examples/: 814_H_calFile_17.02.2022_0=0.txt  benchmark_pipeline.py  compilation_stages.py  debugging.ipynb  debugging.py  encode_recreate_mol_exp_quantized_ir.py  fit_all_calibrations_in_examples.py  fit_optical_power_calibration.py  intent_ir_encode_and_hash_demo.py  optical_power_calibration_demo.py  phase_minimiser.py  plot_de_compensation_file.py  recreate_current.py  sequence_repo.py  sequence_samples_debug.py  sequence_samples_debug_sin2_calib.py  sequence_samples_debug_tanh2_calib.py  simple_tweens.py
examples/calibrations/: 814_V_calFile_17.02.2022_0=0.txt  sin2_calibration_constants.py
examples/spcm/: 1_gen_single.py  2_gen_single_2ch.py  5_gen_sequence.py  5_gen_sequence_trigger_dc_pulse.py  5_scapp_gen_fifo_sine.py  6_awgsegmentfactory_segment_hotswap.py  6_awgsegmentfactory_sequence_upload.py  6_awgsegmentfactory_trigger_dc_pulse.py  6_awgsegmentfactory_upload_cpu_vs_scapp_readback.py  7_awgsegmentfactory_benchmark_compile_upload.py  common.py
src/awgsegmentfactory/: __init__.py  builder.py  calibration.py  debug_plot.py  (+19 more)
tests/: test_builder.py  test_calibration_sin2.py  test_calibration_tanh2.py  test_debug_ir_format.py  test_debug_samples.py  test_intent_ir_codec.py  test_interpolation.py  test_optical_power_calibration_fit.py  test_phase_minimiser.py  test_program_ir.py  test_quantized_ir_codec.py  test_sample_compile.py  test_sequence_compile.py  test_state_continuity.py  test_upload.py
(+8 files in other folders)
