[project]
name = "awgsegmentfactory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tomhepz", email = "9285131+tomhepz@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "spcm>=1.12.0",
]

[project.optional-dependencies]
cuda = [
    "cupy-cuda13x>=13.6.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "ruff>=0.14.13",
    "widgetsnbextension>=4.0.15",
]
